--- a/style.css
+++ b/style.css
@@ -54,13 +54,23 @@ form {
     top: 10vh;
     transition: 1s ease-in-out;
 }
+#loginForm {
+    width: 50%; 
+    display: flex;
+    flex-direction: row;
+}
+#signForm fieldset {
+    width: 50vw; 
+    display: flex;
+    flex-direction: row;
+}
 fieldset {
-    width: 25%;
+    /* width: fit-content; */
     padding: 20px;
     border: none;
 
 }
-input, button, textarea {
+input, button, textarea, input[type='checkbox'] {
     font-size: 15px;
     font-weight: 700;
     padding: 20px;
@@ -70,7 +80,7 @@ input, button, textarea {
     border-radius: 5px;
     border: none;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
-    display: block;
+    display: inline;
 }
 button {
     display: inline;
@@ -103,7 +113,7 @@ video {
     width: 100%;
     filter: opacity(0.05);
 }
-.help-block {
+.help-block, .help {
     background-color: transparent;
     color: #dc3545!important;
 }
