--- a/profile/style.css
+++ b/profile/style.css
@@ -1,10 +1,17 @@
 section {
     padding: 10px;
+    text-align: center;
+}
+img {
+    border-radius: 50%;
+    margin: 5px auto;
 }
 .bio-data {
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
+    max-width: 50vw;
+    margin: 5px auto;
 }
 textarea {
     width: 250px;
@@ -35,14 +42,14 @@ textarea {
     right: 120px;
 }
 div.data-box {
-    padding: 3px;
+    padding: 10px;
     background-color: #fff;
     margin: 5px;
     border-radius: 5px;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
-    position: absolute;
-    right: 120px;
-    border: 2px solid red;
+    border: 2px solid grey;
+    display: flex;
+    flex-direction: column;
 }
 
 .input-type-field {
